# GoLite2LLVM

./: README.md
src/: Makefile  codegen.ml  dune  error.messages  exec.ml  lexer.mll  main.ml  meta.ml  parser.mly  parser_exn.ml  semantics.ml  syntax.ml  tags.ml  utils.ml
src/codegen/: cg_common.ml  cg_expr.ml  cg_generate.ml  cg_stmt.ml  cg_tdecl.ml  cg_types.ml
src/semantics/: conversion.ml  env.ml  env_helper.ml  type_check.ml
src/syntax/: ast.ml  common.ml  repr.ml  typed.ml
